# mancalapy

./: Makefile  README.md  docker-compose.yml
server/: Dockerfile  Makefile  README.md  pyproject.toml
server/mancala_backend/: controller.py  events.py  main.py  server.py
server/mancala_backend/core/: __init__.py  board.py  game.py  pit.py
server/mancala_backend/models/: __init__.py  game.py  player.py  session.py  user.py
server/src/: game.py
server/tests/core/: test_board.py  test_game.py
web/: Dockerfile  Makefile  README.md  pyproject.toml
web/mancala_frontend/: main.py
web/mancala_frontend/static/: script.js  style.css
web/mancala_frontend/templates/: index.html
