[tool.poetry]
name = "mancalapy-server"
version = "0.1.0"
description = "Server for Mancala Game"
authors = ["Breno Silva <brenophp@gmail.com>"]
license = "GNU3"
readme = "README.md"
packages = [{include = "mancalapy_server"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
