[tool.poetry]
name = "mancala-backend"
version = "0.1.0"
description = "Server for Mancala Game"
authors = ["Breno Silva <brenophp@gmail.com>"]
license = "GNU3"
readme = "README.md"
packages = [{include = "mancala_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
flask-socketio = "^5.3.3"
eventlet = "^0.33.3"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
bandit = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
