[tool.poetry]
name = "mancala-frontend"
version = "0.1.0"
description = "Mancala Game"
authors = ["Breno Silva <brenophp@gmail.com>"]
license = "GNU3"
readme = "README.md"
packages = [{include = "mancala_frontend"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
